--- a/craft_sicherungWebsite/templates/spenden/jetztspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/jetztspenden.html
@@ -168,7 +168,7 @@ function linkModalAnpasen () {
 <div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout" style="background-color: #ffffff; padding-bottom: 0;">
-    <span id="copy"> Mit einer monatlichen Spende von </span>
+    <span id="copy"> Mit einer monatlichen Spende von... </span>
 
     <div class="row" style="padding-top: 1.5rem;">
       <div class="col-sm-7">
