--- a/craft_sicherungWebsite/templates/spenden/spende.html
+++ b/craft_sicherungWebsite/templates/spenden/spende.html
@@ -241,16 +241,10 @@
               <div class="col-6"> E-Mail   </div> <div class="col-6">  <span id="emailK"></span>  </div>
             </div>
 
-            <div class="row" style="justify-content: center;">
-              <div class="col-4">
+            <div style="display: flex; justify-content: space-between;">
                 <button type="button" onclick="bearbeiten()" class="btn btn-primary">Bearbeiten</button>
-              </div>
-.              <div class="col-4">
-                <button type="button" onclick="pdfErstellen()" class="btn btn-primary">Ausdrucken</button>
-              </div>
-              <div class="col-3">
-                <input type="submit" value="Senden" class="btn btn-primary">
-              </div>
+                <button type="button" onclick="pdfErstellen()" class="btn btn-primary">Auftrag ausdrucken und verschicken</button>
+                <input type="submit" value="Auftrag online absenden" class="btn btn-primary">
             </div>
           </form>
         </div> <!-- Die Kontrollansicht mit den Feldern -->
