--- a/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung-1.html
+++ b/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung-1.html
@@ -67,6 +67,7 @@
   <div class="container achterspaltenlayout text-center">
     {% set entries = entry.children().all() %}
     {% set entry = random(entries) %}
+    {% set entry = craft.entries.section('fuerSie').slug('1-joh-3-16-ff').one() %}
     <div id="zitat"  style="padding-bottom: 0px;"> {{ entry.text }}  </div>
     <div id="autor"> {{ entry.title }}  </div>
   </div>
