--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -180,8 +180,10 @@
   <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
 </div>
 
-<div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 5rem;">
+<div class="container zwoelferspaltenlayout" style="padding-top: 1rem; padding-bottom: 5rem;">
+  <a target="_blank" href="https://mein-regenwald.de/">
   <img class="img-fluid "src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% endif %}">
+  </a>
 </div>
 
 <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 2.5rem; padding-top: 0;">
